[gd_scene load_steps=10 format=3 uid="uid://b0k1e7ltcmbkq"]

[ext_resource type="PackedScene" uid="uid://orrylwy00mj5" path="res://scenes/characters/character.tscn" id="1_t8iln"]
[ext_resource type="Script" path="res://scenes/characters/mortars.gd" id="2_2yr1a"]
[ext_resource type="Texture2D" uid="uid://blxcqbe7c5ydw" path="res://resources/images/weapons/mortars_rack.svg" id="3_ocrbr"]
[ext_resource type="PackedScene" uid="uid://dwt7s2pmjupnb" path="res://scenes/characters/ai/movement_ai.tscn" id="4_7rbvd"]
[ext_resource type="Texture2D" uid="uid://cifl8tuc4de3h" path="res://resources/images/weapons/mortars_barrel.svg" id="4_uh60p"]
[ext_resource type="PackedScene" uid="uid://meqegj8png7j" path="res://scenes/projectiles/projectile_launcher.tscn" id="5_cuwrh"]
[ext_resource type="PackedScene" uid="uid://bxsita1et0rr2" path="res://scenes/projectiles/mortar.tscn" id="6_tj24b"]
[ext_resource type="AudioStream" uid="uid://624gyteil0v2" path="res://resources/audio/characters/weapons/mortars.wav" id="7_vlnc3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x2dvv"]
radius = 8.0

[node name="Mortars" instance=ExtResource("1_t8iln")]
script = ExtResource("2_2yr1a")

[node name="Hurtbox" parent="." index="0"]
health = 60

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource("CircleShape2D_x2dvv")

[node name="CharacterSprite" parent="." index="2"]
rotate_enabled = false

[node name="MortarsRack" type="Sprite2D" parent="CharacterSprite" index="3"]
position = Vector2(9, -4)
scale = Vector2(0.31, 0.31)
texture = ExtResource("3_ocrbr")

[node name="MortarsBarrel" type="Sprite2D" parent="CharacterSprite" index="4"]
unique_name_in_owner = true
position = Vector2(13, -8)
scale = Vector2(0.31, 0.31)
texture = ExtResource("4_uh60p")

[node name="ProjectileLauncher" parent="CharacterSprite/MortarsBarrel" index="0" node_paths=PackedStringArray("character") instance=ExtResource("5_cuwrh")]
unique_name_in_owner = true
position = Vector2(45.1613, -45.1613)
scale = Vector2(3.22581, 3.22581)
character = NodePath("../../..")
projectile_scene = ExtResource("6_tj24b")
audio = ExtResource("7_vlnc3")

[node name="MovementAI" parent="." index="3" node_paths=PackedStringArray("character") instance=ExtResource("4_7rbvd")]
target_distance_min = 48.0
target_distance_max = 384.0
move_speed_multiple = 0.6
attack_wait = 3.0
attacking_speed_multiple = 0.1
character = NodePath("..")

[connection signal="attack" from="MovementAI" to="." method="_on_movement_ai_attack"]
